--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
-    "express-sessions": "^1.0.6",
     "express-validator": "^4.3.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.12.5",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+	"express-ejs-layouts": "~2.1.0",
+	"passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "bcrypt-nodejs": "latest",
+    "connect-flash": "~0.1.1"
   }
 }
