--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
@@ -21,7 +22,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "node-pre-gyp": "^0.6.39",
-    "nodemon": "^1.14.0",
+    "nodemon": "^1.14.3",
     "passport": "~0.1.17",
     "passport-local": "^0.1.6",
     "serve-favicon": "~2.4.5"
